--- a/styles/style.css
+++ b/styles/style.css
@@ -1,42 +1,12 @@
 /* ========================  Font Faces  ==================================== */
-@font-face {
-  font-family: 'source-sans';
-  src: url("SourceSansPro-Regular.otf"); }
-@font-face {
-  font-family: 'kimbalt';
-  src: url(kimbalt.ttf) format("truetype"); }
 /* ========================  Media Queries  ================================= */
-@media only screen and (min-device-width: 1900px) {
-  div.decks {
-    width: 1620px; } }
-@media only screen and (min-device-width: 1716px) and (max-device-width: 1899px) {
-  div.decks {
-    width: 1440px; } }
-@media only screen and (min-device-width: 1516px) and (max-device-width: 1715px) {
-  div.decks {
-    width: 1260px; } }
-@media only screen and (min-device-width: 1316px) and (max-device-width: 1515px) {
-  div.decks {
-    width: 1080px; } }
-@media only screen and (min-device-width: 1116px) and (max-device-width: 1315px) {
-  div.decks {
-    width: 900px; } }
-@media only screen and (min-device-width: 916px) and (max-device-width: 1115px) {
-  div.decks {
-    width: 720px; } }
-@media only screen and (min-device-width: 716px) and (max-device-width: 915px) {
-  div.decks {
-    width: 540px; } }
-@media only screen and (min-device-width: 516px) and (max-device-width: 715px) {
-  div.decks {
-    width: 360px; } }
-@media only screen and (min-device-width: 316px) and (max-device-width: 515px) {
-  div.decks {
-    width: 180px; } }
 /* =======================  General Section  ================================ */
 * {
-  font-size: 13pt;
-  font-family: 'Open Sans', sans-serif; }
+  font-size: 14pt;
+  font-family: 'source-sans', sans-serif; }
+
+html {
+  overflow-y: scroll; }
 
 html, body {
   margin: 0px; }
@@ -56,21 +26,14 @@ html, body {
   display: none; }
 
 .background {
-  padding-top: 25px;
-  margin: 96px auto 0px auto;
-  width: 100%;
+  padding-top: 2rem;
+  margin: 5.5rem auto 0 auto;
+  width: 90%;
   max-width: 1024px; }
-
-.decks {
-  margin: 0px auto;
-  overflow: hidden;
-  max-width: 100%; }
 
 body {
   background-color: #e7eff6;
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 90%;
+  width: 100%;
   font-family: Arial, Georgia, sans-serif;
   line-height: 1.3em;
   color: black;
@@ -80,7 +43,8 @@ h1 {
   font-size: 3em; }
 
 h2 {
-  font-size: 2em; }
+  font-size: 2em;
+  line-height: 1em; }
 
 h3 {
   font-size: 1.5em; }
@@ -95,40 +59,14 @@ h6 {
   font-size: .5em; }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'Raleway', sans-serif;
   color: #218ACC;
   font-weight: bold; }
 
-ol ol ol li {
-  list-style: lower-alpha; }
-
-ol ol li {
-  font-weight: normal;
-  list-style: decimal;
-  padding-top: 0em; }
-
-ol li {
-  font-weight: bold;
-  list-style: upper-roman;
-  padding-top: 1em; }
-
-ul ul ul li {
-  list-style: circle; }
-
-ul ul li {
-  list-style: square; }
-
-ul li {
-  list-style: disc; }
-
 a:link {
-  color: #2193c0; }
+  color: #218ACC; }
 
 a:visited {
   color: #092834; }
-
-li {
-  margin: 0; }
 
 .skinny {
   max-width: 1024px;
@@ -146,80 +84,124 @@ li {
     .skinny h4 a:hover {
       color: #218ACC;
       background-color: white; }
+  .skinny a {
+    text-decoration: none; }
 
 /* =============================  Home Page  ============================ */
+#home div.card {
+  background-color: white;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  border-radius: 2px;
+  display: inline-block;
+  min-height: 250px;
+  width: 90%;
+  margin: 30px 0px 30px 20px;
+  position: relative; }
+  #home div.card h3 {
+    width: 100%;
+    background-color: #218ACC;
+    padding: 0px;
+    margin: 0px;
+    font-size: 2em;
+    line-height: 2em;
+    color: white;
+    font-family: sans-serif; }
+  #home div.card p {
+    margin: 0px;
+    padding: 25px;
+    line-height: 1.5em; }
+  #home div.card span {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    /* fixes overlap error in IE7/8,
+       make sure you have an empty gif */
+    background-image: url("empty.gif"); }
+#home div.card:hover {
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22); }
+#home .background {
+  margin: 5.5rem auto 0 auto;
+  width: 90%;
+  max-width: 1024px; }
 #home div.column1 {
   float: left; }
 #home div.column2 {
   float: right; }
-#home div.decks {
-  max-width: 900px;
-  width: 900px; }
 #home div.column1, #home div.column2 {
   width: 47%;
-  max-width: 500px; }
-  #home div.column1 a, #home div.column2 a {
-    padding: 7px 12px;
-    border: #218ACC 2px solid;
-    background-color: #218ACC;
-    color: white;
-    font-weight: bold;
-    text-decoration: none; }
-  #home div.column1 a:link, #home div.column2 a:link {
-    font-size: 1.2em;
-    color: white; }
-  #home div.column1 a:visited, #home div.column2 a:visited {
-    font-size: 1.2em;
-    color: white; }
-  #home div.column1 a:hover, #home div.column2 a:hover {
-    background-color: white;
-    color: #218ACC; }
+  max-width: 500px;
+  /*        a {
+              padding: 7px 12px;
+              border: $mainBlue 2px solid;
+              background-color: $mainBlue;
+              color: white;
+              font-weight: bold;
+              text-decoration: none;
+          }
+          a:link {
+              font-size: 1.2em;
+              color: white;
+          }
+          a:visited {
+              font-size: 1.2em;
+              color: white;
+          }
+          a:hover {
+              background-color: white;
+              color: $mainBlue;
+          }*/ }
   #home div.column1 h3, #home div.column2 h3 {
     text-align: center; }
 
+@media only screen and (max-width: 650px) {
+  #home div.column1, #home div.column2 {
+    width: 100%;
+    max-width: 100%; } }
 /* =============================  New Board Page  ============================ */
 #newBoards .background li {
   padding-top: 5px; }
-#newBoards div.decks {
-  width: 900px; }
 
 /* =============================  Deck Database  ============================ */
-#decksBody h1:first-of-type {
-  max-width: 1024px;
-  margin-left: auto;
-  margin-right: auto; }
 #decksBody h3:first-of-type {
   text-align: center; }
 #decksBody .background {
-  max-width: 100%; }
+  max-width: 100%;
+  width: 100%; }
 #decksBody .logoborder {
   width: 100%;
-  border-top: #218ACC solid 5px;
-  border-bottom: #218ACC solid 5px;
-  margin-top: 35px;
-  margin-bottom: 20px;
-  overflow: auto; }
+  border-top: thin #CCD1D9 solid;
+  border-bottom: thin #CCD1D9 solid;
+  margin: 40px 0px;
+  background-color: white; }
 #decksBody .logo {
-  width: 100%;
+  width: 90%;
   max-width: 1000px;
-  margin-left: auto;
-  margin-right: auto;
-  padding-top: 15px;
-  padding-bottom: 15px;
-  clear: both;
+  margin: 0px auto;
+  padding: 15px 0px;
   display: block; }
 
+.decks {
+  margin: 0px auto;
+  max-width: 100%;
+  overflow: auto; }
+
 .gallery {
+  display: block;
+  float: left;
   margin: 10px;
   border: 2px solid #218ACC;
   height: 520px;
   width: 156px;
-  float: left;
-  text-align: center;
   border-radius: 8px;
   background-color: #A8CCFF;
+  overflow: hidden;
+  text-align: center;
   position: relative;
-  overflow: hidden; }
+  box-sizing: border-box; }
   .gallery a {
     position: absolute;
     width: 100%;
@@ -244,8 +226,8 @@ li {
   .gallery h3 {
     font-weight: bold;
     color: white;
-    display: inline-block;
-    font-size: 20px;
+    display: block;
+    font-size: 1rem;
     padding: 3px 0px;
     border-top: 1px #218ACC solid;
     border-bottom: 1px #218ACC solid;
@@ -275,7 +257,7 @@ div.jumpToDeck {
   div.jumpToDeck td {
     padding: 15px 0px; }
   div.jumpToDeck a {
-    font-size: 22px;
+    font-size: 1rem;
     display: inline-block;
     width: 130px;
     border: #218ACC 2px solid;
@@ -285,6 +267,20 @@ div.jumpToDeck {
     color: #218ACC; }
 
 /* ===============================  Deck Page   ============================= */
+@media only screen and (max-width: 800px) {
+  body#deckPage h2 {
+    width: 100% !important; }
+
+  div.deckBody div.column1, div.deckBody div.column2 {
+    float: none !important;
+    width: 100% !important; }
+  div.deckBody img {
+    height: 300px; }
+
+  body#deckPage h4 {
+    display: none !important; }
+    body#deckPage h4 a {
+      display: none !important; } }
 body#deckPage h4 {
   float: right;
   margin-top: 30px;
@@ -300,6 +296,10 @@ body#deckPage h4 {
     color: #218ACC;
     background-color: white; }
 
+body#deckPage h2 {
+  width: 41.66667%;
+  text-align: center; }
+
 div.deckBody {
   width: 100%;
   overflow: hidden; }
@@ -307,21 +307,25 @@ div.deckBody {
     width: 41.66667%;
     float: left; }
     div.deckBody div.column1 figure {
-      border: solid 2px #003366;
+      border: solid 2px #218ACC;
+      border-radius: 3px;
       padding: 35px 25px;
-      background-color: #218ACC;
+      background-color: white;
       width: auto;
       text-align: center;
       min-width: 193px; }
   div.deckBody div.column2 {
     width: 52.08333%;
     float: right; }
+    div.deckBody div.column2 h3 {
+      text-align: center;
+      margin-top: 2.2rem; }
     div.deckBody div.column2 table {
       border-collapse: collapse;
       margin-left: auto;
       margin-right: auto;
       width: 100%;
-      margin-bottom: 41px;
+      margin-bottom: 1.5rem;
       table-layout: fixed; }
     div.deckBody div.column2 tr {
       border-bottom: 1px solid #218ACC; }
@@ -335,6 +339,7 @@ div.deckBody {
       font-weight: bold; }
 
 .video-container {
+  margin-top: 1rem;
   position: relative;
   padding-bottom: 56.25%;
   padding-top: 35px;
@@ -413,6 +418,18 @@ label {
   font-weight: bold; }
 
 /* =============================== Search Page ============================== */
+#search .decks {
+  margin: 0 auto;
+  overflow: hidden; }
+#search .gallery {
+  height: auto; }
+  #search .gallery div {
+    height: auto; }
+  #search .gallery h3 {
+    margin: 0; }
+#search .background {
+  max-width: 100%;
+  width: 100%; }
 #search #slider-range {
   width: 25em;
   max-width: 100%; }
@@ -452,9 +469,6 @@ label {
   color: white;
   font-weight: bold; }
 
-body#search div.background {
-  max-width: 100%; }
-
 /* =============================== Guides Page ============================== */
 #guides img {
   border: #218ACC solid 5px;
@@ -473,49 +487,51 @@ body#search div.background {
 
 /* =============================  Header  =================================== */
 header {
-  width: 100%;
-  height: 56px;
-  overflow: hidden;
   position: absolute;
   top: 0px;
   left: 0px;
-  z-index: 102;
+  width: 100%;
+  height: 3.5rem;
   background-color: white; }
   header h1 {
     text-align: center;
-    font-size: 2em;
-    font-family: kimbalt, sans-serif;
-    letter-spacing: 0.1em;
-    margin: 19px auto;
-    color: #218ACC; }
+    font-family: 'Bungee', sans-serif;
+    color: #218ACC;
+    font-size: 2rem;
+    line-height: 1rem;
+    font-weight: 300; }
 
 #home header h1, #decksBody header h1, #resourcesPage header h1, #submitAdeck header h1, #newBoards header h1, #guides header h1 {
   color: white; }
 
 /* ===================  Navigation Section  ================================= */
+@media only screen and (max-width: 800px) {
+  /* For mobile phones: */
+  nav#menu li {
+    display: block;
+    border-bottom: 1px solid black;
+    border-right: none;
+    border-left: none; }
+
+  .background {
+    margin-top: 15.5rem !important; } }
 nav {
   position: absolute;
-  top: 56px;
+  top: 3.5rem;
   left: 0px;
   width: 100%;
-  height: 35px;
-  font-size: 16px;
   font-weight: bold;
   text-align: center;
   background: white;
   border-top: solid thin black;
   border-bottom: solid thin black;
-  overflow: hidden;
-  z-index: 101;
   font-family: 'Roboto', sans-serif;
   -webkit-box-shadow: 0px 3px 5px 0px gray;
   -moz-box-shadow: 0px 3px 5px 0px gray;
-  box-shadow: 0px 3px 5px 0px gray; }
+  box-shadow: 0px 3px 5px 0px gray;
+  overflow: hidden; }
   nav ul {
-    height: 35px;
-    padding: 0px;
     margin: 0px auto;
-    position: relative;
     width: 100%;
     max-width: 1024px;
     display: table;
@@ -523,8 +539,7 @@ nav {
     border-collapse: collapse; }
   nav li {
     border-left: solid black thin;
-    height: 35px;
-    line-height: 35px;
+    line-height: 2rem;
     padding: 0;
     width: auto;
     display: table-cell;
@@ -535,7 +550,11 @@ nav {
     text-decoration: none !important;
     padding: 0;
     display: block;
-    background-color: white; }
+    background-color: white;
+    -webkit-transition: background-color 0.15s, color 0.15s;
+    /* Safari */
+    transition: background-color 0.15s, color 0.15s;
+    transition-timing-function: ease-in-out; }
   nav a:link, nav a:visited {
     color: black; }
 
@@ -625,4 +644,4 @@ footer p {
   text-align: center;
   padding-top: 10px; }
 
-/*# sourceMappingURL=newstyle.css.map */
+/*# sourceMappingURL=style.css.map */
